# sortify

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
docs/: contributing.md
libs/cimgui/: cimgui.h
libs/cimgui/imgui/: imconfig.h
libs/raylib-cimgui/: imgui_impl_raylib.h  rlcimgui.c  rlcimgui.h
libs/raylib-cimgui/extras/: FA6FreeSolidFontData.h  IconsFontAwesome6.h
scripts/: build.sh  install.sh  run.sh
src/: algo.c  algo.h  config.c  config.h  file.c  file.h  sortify.c
